# litestar-boilerplate

./: .gitignore  CONTRIBUTING.md  README.ko.md  README.md  pyproject.toml
.github/: project-metadata.md
.github/workflows/: ci.yml
src/litestar_boilerplate/: __init__.py  cli.py  i18n.py  readme_generator.py
src/litestar_boilerplate/generators/: __init__.py  base.py  ddd_lite.py  factory.py  feature_based.py  layered.py
